#pragma once
#include <string>
#include <iostream>
#include <vector>
#include <windows.h>
#include "Globals.h"
#include <fstream> 

#include <sql.h>
#include <sqlext.h>
#pragma comment(lib, "odbc32.lib")

/*
Notes:
 
Another query call when pulling if we want the list to be ordered:
"SELECT id, username, score FROM users ORDER BY score DESC"

*/

class Database
{
public:
	bool sqlConnect(std::string t_ODBCString);

	std::vector<SONGDATA> getAllSongs();
	std::vector<USERDATA> getLeaderboardBySong(int t_songID);
	std::vector<USERDATA> getLeaderboardData();

	bool submitScore(std::string t_username, int t_score);
	bool submitScoreFromFile(std::string t_filePath);

	bool submitResult(std::string t_username, std::string t_songName, SessionStats& t_stats, std::string t_fileMidiPath);

	int getSongID(const std::string& t_songName);
	int getUserID(const std::string& t_username);

	bool uploadMIDI(std::string& t_filePath, std::vector<char>& t_outputBuffer);
	bool downloadMIDI(int t_resultID, std::string& t_outputPath);

	void SQLCleanup(/*SQLHENV& t_handleEnvir, SQLHDBC& t_handleDbc, SQLHSTMT& t_handleStatement*/);

	bool getConnectionStatus();

private:
	SQLHENV handleEnvir;
	SQLHDBC handleDbc;
	SQLHSTMT handleStatement;

	bool b_isConnected = false;
};

