#pragma once
#include <vector>
#include <iostream>
#include <SFML/Graphics.hpp>
#include "Globals.h"
#include <windows.h>
#include "InputField.h"
#include "ScoreManager.h"

/*
Notes:
	Assign each song a specific difficulty, then change that text's colour to correspond to that difficulty.

*/

struct SongButton
{
	sf::RectangleShape m_buttonShape;
	sf::RectangleShape m_previewButtonShape;

	//sf::Sprite m_previewSprite;
	sf::Text m_songNameText;
	sf::Text m_songDifficultyText;
	sf::Text m_difficultyText; 
	sf::Text m_pbScoreText;
	sf::Text m_pbScore;

	std::string midiPath = " ";
	std::string songName = " ";

	// Music Note
	//sf::Texture m_musicNoteTex;
	std::shared_ptr<sf::Texture> m_musicNoteTex;
	sf::Sprite m_musicNoteSprite;

	SongButton(std::shared_ptr<const sf::Font> font)
				: m_songNameText(*font),
				m_songDifficultyText(*font),
				m_difficultyText(*font),
				m_pbScoreText(*font),
				m_pbScore(*font),
				m_musicNoteTex(std::make_shared<sf::Texture>()),
				m_musicNoteSprite(*m_musicNoteTex)
	{

	}
};

enum SONGDIFFICULTIES
{
	EASY,
	MEDIUM,
	HARD,
	UNKNOWN
};

enum class SongClickResult
{
	None,
	SongSelected,
	PreviewClicked,
	BeginClicked,
	PreviewDemoClicked,
	CustomLoadClicked,
	GhostClicked
};

struct SongPaths
{
	std::string name = " ";
	std::string path = " ";
	SONGDIFFICULTIES difficulty = SONGDIFFICULTIES::UNKNOWN;
};

class SongSelect
{
public:
	SongSelect(std::shared_ptr<const sf::Font> font, ScoreManager& t_scoreManager);

	void setupPathStrings();
	void setupButtons();
	void setupBeginButton();
	void setupPreviewButton();
	void setupGhostButton();
	void setupUIFrames();
	void setupInputFieldButton();
	
	void render(sf::RenderWindow& t_window);

	SongClickResult mouseClick(sf::Vector2f t_mousePos);
	bool returnClick(sf::Vector2f t_mousePos);
	bool checkIfAreaClicked(sf::Vector2f t_mousePos, sf::Vector2f t_topLeft, sf::Vector2f t_size);

	void handleEvent(sf::Event& t_event);
	void update(float t_deltaTime);

	std::string getMidiPathString();
	std::string getSongName();
	std::string getPreviewPathString();

	std::string DifficultyToString(SONGDIFFICULTIES t_difficulty);

	void togglePreviewColour(bool t_bool);
	void toggleGhostColour(bool t_bool);

	void updatePDScores();

private:
	ScoreManager* m_scoreManager;

	std::vector<SongButton> m_buttons;
	std::shared_ptr<const sf::Font> m_font;
	std::string m_selectedPath = "ASSETS\\AUDIO\\MUSIC\\C_Scale.mid"; // Default midi file
	std::string m_selectedName = " ";
	std::string m_previewPath = " ";

	sf::RectangleShape m_returnButton;
	sf::Texture m_returnTexture;
	sf::Sprite m_returnSprite{ m_returnTexture };

	// Button 
	float m_posX = paddingX;
	float m_posY = paddingY + 100.0f;
	float m_spacing = 60.0f;
	sf::Vector2f m_buttonSize = { 600.0f, 40.0f };
	float m_difficultyTextSpacing = 200.0f;

	int m_pathsCount = 4; // Change this in setup paths function to be consistent

	bool b_isPreviewPlaying = false;

	// Begin button
	sf::RectangleShape m_beginButton;
	sf::Text m_beginText;
	bool b_isSongChosen = false;
	// Preview button
	sf::RectangleShape m_previewButton;
	sf::Text m_previewText;
	sf::Vector2f m_playButtonSize{ 200.0f, 50.0f };
	// Ghost button
	sf::RectangleShape m_ghostButton;
	sf::Text m_ghostext;
	sf::Vector2f m_ghostButtonSize{ 200.0f, 50.0f };

	std::vector<SongPaths> m_pathVector;

	sf::Color c_Easy = sf::Color::Green;
	sf::Color c_Medium = sf::Color::Yellow;
	sf::Color c_Hard = sf::Color::Red;
	sf::Color c_Unknown = sf::Color::White;
	sf::Color c_buttonActive = sf::Color(200,0,20,100);
	sf::Color c_buttonInactive = sf::Color(100, 100, 100, 100);

	// UI Background Frames
	sf::RectangleShape m_songListFrame;
	sf::RectangleShape m_songListTextFrame;
	sf::Text m_songListFrameText;
	sf::RectangleShape m_modeButtonsFrame;
	sf::RectangleShape m_modeButtonsTextFrame;
	sf::Text m_modeButtonsFrameText;
	sf::Color c_frameColour = sf::Color(100, 100, 100, 100);

	sf::RectangleShape m_songListBottomBorder;

	sf::Vector2f m_loadMidiFieldPos{ paddingX, paddingY + 525.0f };
	sf::Vector2f m_fieldSize{ 600.0f, 50.0f };
	int m_characterSize = 40;
	int m_maxLength = 20;
	InputField m_loadMidiField;

	sf::Vector2f m_fieldButtonSize{ 150.0f, 50.0f };
	sf::Color c_inactiveColour = sf::Color(230, 200, 200, 240);
	sf::Color c_activeColour = sf::Color(0, 250, 20, 240);

	sf::RectangleShape m_loadCustomMidiButton;
	sf::Text m_loadCustomMidiButtonText;

	sf::Texture m_loadCustomMCITex;
	sf::Sprite m_loadCustomMCISprite{ m_loadCustomMCITex };
};

